syntax = "proto3";
package relapse_proto;
option go_package="github.com/nerdynz/relapse/daemon/relapse_proto";

message Capture {
	int64 CaptureID = 1;
	string AppName = 2;
	string WindowTitle = 3;
	string Filepath = 4;
	string Fullpath = 5;
	int64 CaptureTimeSeconds = 6;
	int64 CaptureDayTimeSeconds = 7;
}

message DayRequest {
  int64 CaptureDayTimeSeconds = 1;
}

message DayResponse {
  int64 CaptureDayTimeSeconds = 1;
  repeated Capture Captures = 2;
}

message Settings {
	repeated Setting Settings = 1;
}
message Setting {
	string Key = 1;
	string Value = 2;
}

message StartRequest {}
message StartResponse {}
message StopRequest {}
message StopResponse {}
message SettingsRequest {}

service Relapse {
  rpc GetSettings(SettingsRequest) returns (Settings) {}
  rpc GetSetting(Setting) returns (Setting) {}
  rpc SetSetting(Setting) returns (Setting) {}
  rpc GetCapturesForADay(DayRequest) returns (DayResponse) {}
  rpc StartCapture(StartRequest) returns (StartResponse) {}
  rpc StopCapture(StopRequest) returns (StopResponse) {}
}